# rust-fleet

./: .gitignore  Cargo.toml  README.md  config.rb  user-data  user-data.sample
src/: api.rs  client.rs  error.rs  fleet.rs  lib.rs  serialize.rs
src/schema/: machine.rs  mod.rs  unit.rs
tests/: client_test.rs
