[package]

name = "fleet_client"
version = "0.0.1"
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A client library for CoreOS's fleet."
license = "MIT"
readme = "README.md"
keywords = ["fleet", "coreos", "systemd"]
repository = "https://github.com/jimmycuadra/fleet_client"
homepage = "https://github.com/jimmycuadra/fleet_client"

[dependencies]

hyper = "0.3.0"
rustc-serialize = "0.3.1"
