[package]

name = "fleet"
version = "0.2.0"
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A client library for CoreOS's fleet."
license = "MIT"
readme = "README.md"
keywords = ["fleet", "coreos", "systemd"]
repository = "https://github.com/jimmycuadra/rust-fleet"
homepage = "https://github.com/jimmycuadra/rust-fleet"

[dependencies]

hyper = ">= 0.3.4"
rustc-serialize = ">= 0.3.7"
url = ">= 0.2.28"

[dev-dependencies]

retry = ">= 0.1.0"
